Frontend: updated the base structure

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,20 +45,12 @@
       <main>
         <div>
           <div class="card" id="root">
-
           </div>
           <div class="card">
             <div class="body">
-              <div class="left">
                 <p>
-                  Something else in here? 
+                  Static Footer here with no JSX
                 </p>
-              </div>
-              <div class="right">
-                <p>
-                  Or does it need to be built in App.js...
-                </p>
-              </div>
             </div>
           </div>
         </div>
