--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,19 +29,19 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinMarquee.js"></script>
-    <div class="header" id="coinmarketcap-widget-marquee" coins="1,1027,7278,7046,8104,6719,1975,3717" currency="USD" theme="light" transparent="false" show-symbol-logo="true">
-      <div class="topnav">
-        <a href="#">Sake 🍶 Wallet</a>
-        <a href="#">Sake 🍶 Loans</a>
-        <a href="#">~</a> 
-        <a href="https://app.aave.com/">AAVE Protocol</a>
-        <a href="https://1inch.exchange/#/">1Inch DEX</a>
-        <a href="https://thegraph.com/">The Graph</a>
-        <a href="https://chain.link/">Chainlink</a>
-        <a href="https://aavegotchi.com/">Aavegotchi</a>
-      </div>
-     </div>
+    
+    <div class="topnav">
+      <a href="#">Sake 🍶 Wallet</a>
+      <a href="#">Sake 🍶 Loans</a>
+      <a href="#">~</a> 
+      <a href="https://app.aave.com/">AAVE Protocol</a>
+      <a href="https://1inch.exchange/#/">1Inch DEX</a>
+      <a href="https://thegraph.com/">The Graph</a>
+      <a href="https://chain.link/">Chainlink</a>
+      <a href="https://aavegotchi.com/">Aavegotchi</a>
+    </div>
+    <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinMarquee.js"></script><div class="header" id="coinmarketcap-widget-marquee" coins="1,1027,7278,7046,8104,6719,1975,3717" currency="USD" theme="light" transparent="false" show-symbol-logo="true" >
+    </div>
       <main>
         <div>
           <div class="card" id="root">
